Fix mobile spacing

--- a/style.css
+++ b/style.css
@@ -140,11 +140,14 @@ input {
 
 @media only screen and (max-width: 600px) {
   body {
+    max-width: 100vw;
     justify-content: flex-start;
     margin: 0;
+    padding: 0 16px;
   }
 
   h1 + div {
+    max-width: 100%;
     flex-direction: column;
   }
 
@@ -161,7 +164,6 @@ input {
 
   h1 {
     transform: none;
-    margin: 4px;
     font-size: 1.25rem;
   }
 
@@ -185,9 +187,8 @@ input {
 
   .toggle {
     transform: none;
-    margin-top: 4px;
-    margin-left: 48px;
     align-self: flex-start;
     order: 1;
+    margin-top: 4px;
   }
 }
